the master page

--- a/Chit Chat/Chit Chat/Chit Chat.csproj
+++ b/Chit Chat/Chit Chat/Chit Chat.csproj
@@ -139,6 +139,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\shared\LayoutPage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
